Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20649

incorrect warning: "qmlscene: Autodetecting compatibility import "QtQuick 1.0""

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0
    • 5.0.0
    • None
    • qt5:
      qtbase: 9a7a18f83a9f3192c3ebabadc645384beb9cd2a2
      qtscript: 17e04f4e88bec7547473fc9a2d9fd34268bd8a42
      qtdeclarative: 2a18f33552d20b637989e876175c6bd03c69bc97

    Description

      if you run the example attached with qmlscene, you get the following warning: "qmlscene: Autodetecting compatibility import "QtQuick 1.0""

      but if you remove the commented line from the test case: //import QtQuick 1.1
      the warning disappears.

      the commented line should have no effect in printing the warning.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            lscunha Leonardo Sobral Cunha (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes