Don't enable qmlscene compability mode for commented out imports.

Valid import statements should be at the start of a line, maybe
preceded by some white space.

Task-number: QTBUG-20649
Change-Id: I1944bce0d30e680ebdb0798f5ae4e8c91a057a13
Reviewed-on: http://codereview.qt.nokia.com/2423
Reviewed-by: Martin Jones <martin.jones@nokia.com>
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>