tools/qmlscene/main.cpp
@@ -358,8 +358,8 @@ static void checkAndAdaptVersion(const QUrl &url)
         return;
     }
 
-    QRegExp quick1("import +QtQuick +1\\.");
-    QRegExp qt47("import +Qt +4\\.7");
+    QRegExp quick1("^\\s*import +QtQuick +1\\.");
+    QRegExp qt47("^\\s*import +Qt +4\\.7");
 
     QString envToWrite;
     QString compat;
